# jami

./: .gitignore  .pre-commit-config.yaml  README.md  cdktf.json  pyproject.toml
policies/: 001-rb-4563.yaml  002-rb-3748.yaml  003-rb-4932.yaml  004-rb-8788.yaml  005-tech-leads.yaml  006-sec-ops.yaml  README.md  approval.yaml  eligibility.yaml
policies/approval/: 001-rb-4563.yaml  002-tech-leads.yaml  003-sec-ops.yaml
policies/eligibility/: 001-rb-4563.yaml  002-rb-3748.yaml  003-rb-4932.yaml  004-rb-8788.yaml
policies/schemas/: eligibility.json.j2
policies/templates/: approval.yaml  eligibility.yaml
src/: main.py
src/common/: policy.py  terraform.py
